--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(styles/header.css);
+@import url(styles/main.css);
 
 :root{
     --cor-primaria-cabecalho: #8F8F8F;
@@ -8,5 +9,5 @@
 }
    
 body {
-    background-color: #333;
+    background-color: #113933;
 }
