--- a/styles/header.css
+++ b/styles/header.css
@@ -2,13 +2,12 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #333;
     color: #fff;
     padding: 5px;
     border-bottom: 1px solid #444;
 }
 
-.empresa {
+.empresa {  
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,8 +17,8 @@
 
 .empresa_logo {
     margin-bottom: 5px;
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     background-color: #fff;
     padding: 5px;
@@ -47,16 +46,16 @@
 }
 
 .botao_contato {
-    background-color: #4CAF50;
+    background-color: #00E2BC;
     color: #fff;
-    padding: 5px 10px;
+    padding: 10px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .botao_contato:hover {
-    background-color: #3e8e41;
+    background-color: #007C67;
 }
 
 .botao_contato-link {
